--- a/mono/css/style.css
+++ b/mono/css/style.css
@@ -7602,12 +7602,170 @@ button.close {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
+@font-face {
+  font-family: BebasNeue;
+  src: url("../fonts/BebasNeue.otf");
+}
+
+@font-face {
+  font-family: JosefinSlabBold;
+  src: url("../fonts/JosefinSlab-Bold.ttf");
+}
+
+@font-face {
+  font-family: JosefinSlabRegular;
+  src: url("../fonts/JosefinSlab-Regular.ttf");
+}
+
 .header-container {
   background: black;
   background: -webkit-linear-gradient(180deg, black, #282828);
   background: linear-gradient(180deg, #000000, #282828);
   width: 100%;
   height: 115px;
+}
+
+.header-center-container {
+  height: 115px;
+  padding: 0;
+}
+
+.header-inner-left {
+  height: 115px;
+  width: 50%;
+  margin: 0 auto;
+  float: left;
+}
+
+.header-inner-left h1 {
+  font-family: BebasNeue;
+  font-size: 55px;
+  color: white;
+  display: inline-block;
+  vertical-align: middle;
+  padding: 0;
+  margin: 0;
+  margin-left: 10px;
+  margin-top: 30px;
+}
+
+.header-inner-right {
+  height: 115px;
+  width: 50%;
+  display: inline-block;
+  float: right;
+  padding: 0;
+  text-align: center;
+}
+
+.header-inner-right-btn {
+  width: 25%;
+  height: 115px;
+  display: inline-block;
+  background: black;
+  background: -webkit-linear-gradient(0deg, black, #282828);
+  background: linear-gradient(0deg, #000000, #282828);
+}
+
+.header-inner-right-btn h3 {
+  font-family: JosefinSlabRegular;
+  font-size: 22px;
+}
+
+.btn-1 {
+  float: left;
+  color: #3ebd41;
+}
+
+.btn-2 {
+  color: #219ee5;
+}
+
+.btn-3 {
+  float: right;
+  color: #d4d236;
+}
+
+.hero-container {
+  height: 450px;
+  width: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/hero.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  vertical-align: middle;
+}
+
+.col-md-6 {
+  height: 450px;
+}
+
+.hero-left-container {
+  width: 100%;
+  height: 80%;
+  margin-top: 10%;
+  background: rgba(0, 0, 0, 0.76);
+  border-radius: 20px;
+}
+
+.hero-left-container h2 {
+  font-family: Georgia;
+  color: white;
+  font-size: 25px;
+  margin-left: 15px;
+  margin-right: 15px;
+  line-height: 40px;
+  text-align: justify;
+  hyphens: auto;
+}
+
+.opsirnije-btn {
+  font-family: JosefinSlabBold;
+  font-size: 20px;
+  color: rgba(255, 255, 255, 0.5);
+  text-shadow: 2px 2px black;
+  padding-left: 30px;
+  padding-right: 30px;
+  background: black;
+  background: -webkit-linear-gradient(180deg, #323030, #0f0f0f);
+  background: linear-gradient(180deg, #323030, #0f0f0f);
+  -webkit-box-shadow: inset 0px 0px 1px 0px white;
+  -moz-box-shadow: inset 0px 0px 1px 0px white;
+  box-shadow: inset 0px 0px 1px 0px white;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  float: right;
+  margin-right: 15px;
+  margin-top: 15px;
+}
+
+.opsirnije-btn:hover {
+  color: white;
+  border: 1px solid white;
+  -webkit-box-shadow: inset 0px 0px 10px 0px black;
+  -moz-box-shadow: inset 0px 0px 10px 0px black;
+  box-shadow: inset 0px 0px 10px 0px black;
+}
+
+.hero-right-container {
+  width: 100%;
+  height: 80%;
+  margin-top: 10%;
+  /*background: rgba(0, 0, 0, 0.76);
+  border-radius: 20px;*/
+  position: relative;
+}
+
+.hero-right-container h2 {
+  font-family: JosefinSlabRegular;
+  font-size: 30px;
+  color: white;
+  line-height: 45px;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .body-container {
