header, hero, footer

--- a/mono/scss/style.scss
+++ b/mono/scss/style.scss
@@ -38,7 +38,7 @@ $menu-btn-gradient: #000000, #151414;
 	height: 115px;
 }
 
-.header-center-container{
+.header-container-background{
 	height: 115px;
 	padding: 0;
 }
@@ -110,7 +110,7 @@ $menu-btn-gradient: #000000, #151414;
 	vertical-align: middle;
 }
 
-.col-md-6{
+.hero-row{
 	height: 450px;
 }
 
@@ -189,4 +189,62 @@ $menu-btn-gradient: #000000, #151414;
 	background: linear-gradient(0deg, $head-foot-gradient);
 	width: 100%;
 	height: 350px;
+}
+
+.footer-row{
+	height: 300px;
+}
+
+.footer-left-container{
+	width: 100%;
+	height: 80%;
+	border-radius: 20px;
+}
+
+.footer-left-container h1{
+	font-family: BebasNeue;
+	font-size: 40px;
+	text-align: center;
+	color: rgba(255, 0, 0, 0.75);
+	text-shadow: 2px 2px black;
+}
+
+.footer-left-container h2{
+	font-family: BebasNeue;
+	font-size: 25px;
+	color: white;
+	display: inline-block;
+	margin: 0;
+	vertical-align: middle;
+	margin-left: 10px;
+	margin-top: 15px;
+}
+
+.footer-right-container{
+	width: 100%;
+	height: 80%;
+	border-radius: 20px;
+}
+
+.footer-right-container h1{
+	font-family: BebasNeue;
+	font-size: 40px;
+	text-align: center;
+	color: rgba(255, 0, 0, 0.75);
+	text-shadow: 2px 2px black;
+}
+
+.footer-right-container h2{
+	font-family: BebasNeue;
+	font-size: 25px;
+	color: white;
+	margin-left: 10px;
+	margin-top: 30px;
+}
+
+.footer-container h3{
+	font-family: BebasNeue;
+	font-size: 20px;
+	color: white;
+	text-align: center;
 }
