--- a/mono/css/style.css
+++ b/mono/css/style.css
@@ -7618,7 +7618,6 @@ button.close {
 }
 
 .header-container {
-  background: black;
   background: -webkit-linear-gradient(180deg, black, #282828);
   background: linear-gradient(180deg, #000000, #282828);
   width: 100%;
@@ -7662,7 +7661,6 @@ button.close {
   width: 25%;
   height: 115px;
   display: inline-block;
-  background: black;
   background: -webkit-linear-gradient(0deg, black, #282828);
   background: linear-gradient(0deg, #000000, #282828);
   -webkit-box-shadow: 0px 0px 3px 2px black;
@@ -7748,7 +7746,6 @@ button.close {
   text-shadow: 2px 2px black;
   padding-left: 30px;
   padding-right: 30px;
-  background: black;
   background: -webkit-linear-gradient(180deg, #323030, #0f0f0f);
   background: linear-gradient(180deg, #323030, #0f0f0f);
   -webkit-box-shadow: inset 0px 0px 1px 0px white;
@@ -7772,8 +7769,6 @@ button.close {
   width: 100%;
   height: 80%;
   margin-top: 10%;
-  /*background: rgba(0, 0, 0, 0.76);
-  border-radius: 20px;*/
   position: relative;
 }
 
@@ -7795,10 +7790,129 @@ button.close {
   -webkit-box-shadow: 0px 0px 20px 5px black;
   -moz-box-shadow: 0px 0px 20px 5px black;
   box-shadow: 0px 0px 20px 5px black;
+  padding: 0;
+}
+
+.sec-main {
+  height: 448px;
+  margin-left: 0;
+  margin-top: 10px;
+  background-color: blue;
+}
+
+.sec-1-nsl, .sec-2-nsl {
+  background-color: rgba(86, 148, 205, 0.76);
+  margin-top: 15px;
+}
+
+.sec-3-nsl, .sec-5-nsl {
+  background-color: rgba(133, 13, 13, 0.76);
+  margin-top: 15px;
+}
+
+.sec-1-nsl h1, .sec-2-nsl h1, .sec-3-nsl h1, .sec-5-nsl h1 {
+  font-family: BebasNeue;
+  font-size: 45px;
+  letter-spacing: 7px;
+  color: white;
+  text-align: center;
+  text-shadow: 2px 2px black;
+}
+
+.sec2, .sec4, .sec5 {
+  background: -webkit-linear-gradient(0deg, black, #201f1f);
+  background: linear-gradient(0deg, #000000, #201f1f);
+  padding: 0;
+}
+
+.sec1 {
+  background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url("../img/sec1bg.jpg") no-repeat center center;
+  object-fit: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  padding: 0;
+  overflow: hidden;
+}
+
+.sec-1-row-left {
+  width: 50%;
+  height: 300px;
+  margin-top: 25px;
+}
+
+.sec-1-row-left h2 {
+  font-family: JosefinSlabRegular;
+  font-size: 35px;
+  color: white;
+  line-height: 45px;
+  margin-left: 90px;
+  margin-top: 20px;
+}
+
+.sec-1-row-right {
+  width: 50%;
+  height: 300px;
+  margin-top: 25px;
+}
+
+.sec-1-row-right h2 {
+  font-family: JosefinSlabRegular;
+  font-size: 35px;
+  color: white;
+  line-height: 45px;
+  margin-left: 20px;
+  margin-right: 70px;
+  margin-top: 20px;
+}
+
+.video-btn {
+  color: rgba(255, 255, 255, 0.5);
+  text-shadow: 2px 2px black;
+  padding-left: 20px;
+  padding-right: 20px;
+  background: -webkit-linear-gradient(180deg, #074490, #033e60);
+  background: linear-gradient(180deg, #074490, #033e60);
+  -webkit-box-shadow: inset 0px 0px 1px 0px white;
+  -moz-box-shadow: inset 0px 0px 1px 0px white;
+  box-shadow: inset 0px 0px 1px 0px white;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  float: right;
+  opacity: 0.7;
+  margin-right: 100px;
+  margin-top: 15px;
+}
+
+.video-btn h3 {
+  font-family: JosefinSlabBold;
+  font-size: 20px;
+  vertical-align: middle;
+  display: inline-block;
+  margin: 0;
+  margin-top: 2px;
+}
+
+.video-btn:hover {
+  color: white;
+  border: 1px solid white;
+  -webkit-box-shadow: inset 0px 0px 10px 0px black;
+  -moz-box-shadow: inset 0px 0px 10px 0px black;
+  box-shadow: inset 0px 0px 10px 0px black;
+  opacity: 1;
+}
+
+.sec3 {
+  background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url("../img/sec3bg.jpg") no-repeat center center;
+  object-fit: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  padding: 0;
 }
 
 .footer-container {
-  background: black;
   background: -webkit-linear-gradient(0deg, black, #282828);
   background: linear-gradient(0deg, #000000, #282828);
   width: 100%;
@@ -7852,7 +7966,7 @@ button.close {
   font-family: BebasNeue;
   font-size: 25px;
   color: white;
-  margin-left: 10px;
+  margin-left: 50px;
   margin-top: 30px;
 }
 
