--- a/mono/css/style.css
+++ b/mono/css/style.css
@@ -7826,7 +7826,7 @@ button.close {
 }
 
 .sec1 {
-  background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url("../img/sec1bg.jpg") no-repeat center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/sec1bg.jpg") no-repeat center center;
   object-fit: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -7849,6 +7849,7 @@ button.close {
   line-height: 45px;
   margin-left: 90px;
   margin-top: 20px;
+  text-shadow: 2px 2px black;
 }
 
 .sec-1-row-right {
@@ -7865,6 +7866,7 @@ button.close {
   margin-left: 20px;
   margin-right: 70px;
   margin-top: 20px;
+  text-shadow: 2px 2px black;
 }
 
 .video-btn {
@@ -7891,6 +7893,7 @@ button.close {
   display: inline-block;
   margin: 0;
   margin-top: 2px;
+  text-shadow: 2px 2px black;
 }
 
 .video-btn:hover {
@@ -7902,8 +7905,29 @@ button.close {
   opacity: 1;
 }
 
+.sec-2-col{
+	height: 300px;
+	padding: 0;
+	margin-top: 25px;
+	text-align: center;
+}
+
+.sec-2-col h2{
+	font-family: "Nirvala UI", serif;
+	font-size: 30px;
+	color: white;
+}
+
+.sec-2-col h3{
+	font-family: "Nirvala UI", serif;
+	font-size: 20px;
+	color: white;
+	margin-left: 30px;
+	margin-right: 30px;
+}
+
 .sec3 {
-  background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url("../img/sec3bg.jpg") no-repeat center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/sec3bg.jpg") no-repeat center center;
   object-fit: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -7911,6 +7935,301 @@ button.close {
   background-size: cover;
   padding: 0;
 }
+
+.sec-3-text h2{
+	font-family: JosefinSlabRegular;
+	font-size: 35px;
+	color: white;
+	margin-top: 40px;
+	margin-left: 20px;
+	text-shadow: 2px 2px black;
+}
+
+.sec-4-left-bg{
+	width: 80%;
+	height: 375px;
+	border-radius: 40px;
+	background: -webkit-linear-gradient(180deg, #5a0101, #351010);
+	background: linear-gradient(180deg, #5a0101, #351010);
+	margin-right: 15px;
+	margin-top: 5%;
+	-webkit-box-shadow: 0px 0px 5px 5px black;
+	-moz-box-shadow: 0px 0px 5px 5px black;
+	box-shadow: 0px 0px 5px 5px black;
+}
+
+.sec-4-left-bg h2{
+	font-family: BebasNeue;
+	font-size: 30px;
+	letter-spacing: 4px;
+	color: white;
+	text-align: center;
+	margin-top: 25px;
+	text-shadow: 2px 2px black;
+}
+
+.sec-4-left-bg h3{
+	font-family: "Myriad Pro";
+	font-size: 15px;
+	color: white;
+	margin: 0;
+	text-shadow: 2px 2px black;
+}
+
+.sec-4-left-bg form{
+	margin-top: 25px;
+	margin-left: 30px;
+}
+
+.sec-4-left-bg input[type='number'], .sec-4-left-bg input[type='text'], .sec-4-left-bg input[type='email']{
+	width: 60%;
+	height: 30px;
+	padding: 0;
+	padding-left: 5px;
+	font-size: 12px;
+	background-color: #1a1616;
+	border: 1px solid black;
+	color: white;
+}
+
+.sec-4-left-bg input[type='number']:focus, .sec-4-left-bg input[type='text']:focus, .sec-4-left-bg input[type='email']:focus{
+	border: 1px solid black;
+	-webkit-box-shadow: inset 0px 0px 10px 0px black;
+	-moz-box-shadow: inset 0px 0px 10px 0px black;
+	box-shadow: inset 0px 0px 10px 0px black;
+}
+
+.sec-4-left-bg input[type='radio']{
+	margin-top: -1px;
+	vertical-align: middle;
+	display: inline-block;
+}
+
+.sec-4-btn{
+	position: absolute;
+	right: 80px;
+	bottom: 30px;
+	background: -webkit-linear-gradient(180deg, #5a0101, #351010);
+	background: linear-gradient(180deg, #5a0101, #351010);
+}
+
+.sec-4-btn-left{
+	position: absolute;
+	right: 80px;
+	bottom: 30px;
+	background: -webkit-linear-gradient(180deg, #5a0101, #351010);
+	background: linear-gradient(180deg, #5a0101, #351010);
+	color: rgba(255, 255, 255, 0.5);
+	text-shadow: 2px 2px black;
+	padding-left: 20px;
+	padding-right: 20px;
+	background: -webkit-linear-gradient(180deg, #074490, #033e60);
+	background: linear-gradient(180deg, #074490, #033e60);
+	-webkit-box-shadow: inset 0px 0px 1px 0px white;
+	-moz-box-shadow: inset 0px 0px 1px 0px white;
+	box-shadow: inset 0px 0px 1px 0px white;
+	border: 1px solid rgba(255, 255, 255, 0.5);
+	opacity: 0.8;
+}
+
+.sec-4-btn-left h3 {
+	font-family: JosefinSlabBold;
+	font-size: 20px;
+	vertical-align: middle;
+	display: inline-block;
+	margin: 0;
+	margin-top: 2px;
+	text-shadow: 2px 2px black;
+}
+
+.sec-4-btn-left:hover {
+	color: white;
+	border: 1px solid white;
+	-webkit-box-shadow: inset 0px 0px 10px 0px black;
+	-moz-box-shadow: inset 0px 0px 10px 0px black;
+	box-shadow: inset 0px 0px 10px 0px black;
+	opacity: 1;
+}
+
+.radio-form{
+	width: 60%;
+	text-align: right;
+	margin-left: -40px;
+}
+
+.sec-4-left-bg h4{
+	font-family: "Myriad Pro";
+	font-size: 10px;
+	letter-spacing: 3px;
+	color: white;
+	margin: 0;
+	display: inline-block;
+	text-align: left;
+	text-shadow: 2px 2px black;
+}
+
+.sec-4-left-bg input[type='number'] {
+    -moz-appearance:textfield;
+}
+
+.sec-4-left-bg input[type=number]::-webkit-inner-spin-button,.sec-4-left-bg input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.sec-4-right-bg{
+	width: 80%;
+	height: 375px;
+	border-radius: 40px;
+	background: -webkit-linear-gradient(180deg, #5a0101, #351010);
+	background: linear-gradient(180deg, #5a0101, #351010);
+	margin-left: 15px;
+	margin-top: 5%;
+	-webkit-box-shadow: 0px 0px 5px 5px black;
+	-moz-box-shadow: 0px 0px 5px 5px black;
+	box-shadow: 0px 0px 5px 5px black;
+}
+
+.sec-4-right-bg h2{
+	font-family: BebasNeue;
+	font-size: 30px;
+	letter-spacing: 4px;
+	color: white;
+	text-align: center;
+	margin-top: 25px;
+	text-shadow: 2px 2px black;
+}
+
+.sec-4-right-bg h3{
+	font-family: "Myriad Pro";
+	font-size: 15px;
+	color: white;
+	margin: 0;
+	text-shadow: 2px 2px black;
+}
+
+.sec-4-right-bg form{
+	margin-top: 25px;
+	margin-left: 30px;
+}
+
+.sec-4-right-bg input[type='number'], .sec-4-right-bg input[type='text'], .sec-4-right-bg input[type='email']{
+	width: 60%;
+	height: 30px;
+	padding: 0;
+	padding-left: 5px;
+	font-size: 12px;
+	background-color: #1a1616;
+	border: 1px solid black;
+	color: white;
+}
+
+.sec-4-right-bg input[type='number']:focus, .sec-4-right-bg input[type='text']:focus, .sec-4-right-bg input[type='email']:focus{
+	border: 1px solid black;
+	-webkit-box-shadow: inset 0px 0px 10px 0px black;
+	-moz-box-shadow: inset 0px 0px 10px 0px black;
+	box-shadow: inset 0px 0px 10px 0px black;
+}
+
+.sec-4-right-bg input[type='radio']{
+	margin-top: -1px;
+	vertical-align: middle;
+	display: inline-block;
+}
+
+.sec-4-right-bg h2{
+	font-family: BebasNeue;
+	font-size: 30px;
+	letter-spacing: 4px;
+	color: white;
+	text-align: center;
+	margin-top: 25px;
+	text-shadow: 2px 2px black;
+}
+
+.sec-4-right-bg h4{
+	font-family: "Myriad Pro";
+	font-size: 12px;
+	letter-spacing: 3px;
+	color: white;
+	margin: 0;
+	display: inline-block;
+	text-align: left;
+	text-shadow: 2px 2px black;
+}
+
+.chc{
+	display: inline-block;
+	margin-top: 20px;
+	margin-left: 20px;
+}
+
+.sec-4-right-bg input[type='checkbox'] {
+    width: 80%;
+}
+
+.sec-4-btn-right{
+	position: absolute;
+	right: 160px;
+	bottom: 30px;
+	background: -webkit-linear-gradient(180deg, #5a0101, #351010);
+	background: linear-gradient(180deg, #5a0101, #351010);
+	color: rgba(255, 255, 255, 0.5);
+	text-shadow: 2px 2px black;
+	padding-left: 20px;
+	padding-right: 20px;
+	background: -webkit-linear-gradient(180deg, #074490, #033e60);
+	background: linear-gradient(180deg, #074490, #033e60);
+	-webkit-box-shadow: inset 0px 0px 1px 0px white;
+	-moz-box-shadow: inset 0px 0px 1px 0px white;
+	box-shadow: inset 0px 0px 1px 0px white;
+	border: 1px solid rgba(255, 255, 255, 0.5);
+	opacity: 0.8;
+}
+
+.sec-4-btn-right h3 {
+	font-family: JosefinSlabBold;
+	font-size: 20px;
+	vertical-align: middle;
+	display: inline-block;
+	margin: 0;
+	text-shadow: 2px 2px black;
+}
+
+.sec-4-btn-right:hover {
+	color: white;
+	border: 1px solid white;
+	-webkit-box-shadow: inset 0px 0px 10px 0px black;
+	-moz-box-shadow: inset 0px 0px 10px 0px black;
+	box-shadow: inset 0px 0px 10px 0px black;
+	opacity: 1;
+}
+
+.sec-5-col{
+	height: 300px;
+}
+
+.sec-5-col h2{
+	font-family: BebasNeue;
+	font-size: 30px;
+	color: white;
+	text-align: center;
+	letter-spacing: 5px;
+	margin-top: 40px;
+	text-shadow: 2px 2px black;
+}
+
+.sec-5-col h3{
+	font-family: JosefinSlabRegular;
+	font-size: 25px;
+	color: white;
+	letter-spacing: 4px;
+	margin-left: 150px;
+	margin-top: 40px;
+	line-height: 45px;
+	text-shadow: 2px 2px black;
+}
+
 
 .footer-container {
   background: -webkit-linear-gradient(0deg, black, #282828);
